# saap

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md  demo.py
examples/modules/: billing.py  billing_contracted.py  inventory.py
scripts/: dogfood.py
src/saap/: __init__.py  cli.py  config.py  dispatcher.py  inference.py  reporter.py
src/saap/runners/: __init__.py  _base.py  _loader.py  crosshair_runner.py  hypothesis_runner.py  icontract_runner.py  mutmut_runner.py
src/saap/templates/: default.qmd
tests/: test_cli.py  test_config.py  test_demo.py  test_dispatcher.py  test_inference.py  test_reporter.py  test_runners.py
